fix login form whitespace

--- a/client/src/modules/form/form.module.scss
+++ b/client/src/modules/form/form.module.scss
@@ -89,7 +89,7 @@ $light-orange: #F7E044;
 }
 
 .loginForm{
-    height: 100%;
+    height: 100vh;
     background-color:  $dark-green;
     padding: 2rem;
     padding-top: 2rem;
